tests/baselines/reference/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.errors.txt
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts(7,20): error TS2454: Variable 't' is used before being assigned.
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts(7,49): error TS2322: Type 'T' is not assignable to type 'S'.
  'S' could be instantiated with an arbitrary type which could be unrelated to 'T'.
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts(10,20): error TS2454: Variable 's' is used before being assigned.
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts(10,35): error TS2322: Type 'T' is not assignable to type 'S'.
  'S' could be instantiated with an arbitrary type which could be unrelated to 'T'.
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts(13,20): error TS2454: Variable 't' is used before being assigned.
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts(14,20): error TS2454: Variable 's' is used before being assigned.
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts(16,9): error TS2322: Type 'null' is not assignable to type 'Chain<S>'.
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts(32,9): error TS2322: Type 'string' is not assignable to type 'number'.
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts(32,21): error TS2454: Variable 'i' is used before being assigned.
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts(36,9): error TS2322: Type 'string' is not assignable to type 'number'.
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts(36,21): error TS2454: Variable 'i' is used before being assigned.
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts(37,9): error TS2322: Type 'string' is not assignable to type 'number'.
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts(37,21): error TS2454: Variable 'i' is used before being assigned.
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts(39,9): error TS2322: Type 'null' is not assignable to type 'Chain2<S>'.


==== chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts (14 errors) ====
    class Chain<T> {
        constructor(public value: T) { }
        then<S extends T>(cb: (x: T) => S): Chain<S> {
            var t: T;
            var s: S;
            // Ok to go down the chain, but error to climb up the chain
            (new Chain(t)).then(tt => s).then(ss => t);
                       ~
!!! error TS2454: Variable 't' is used before being assigned.
                                                    ~
!!! error TS2322: Type 'T' is not assignable to type 'S'.
!!! error TS2322:   'S' could be instantiated with an arbitrary type which could be unrelated to 'T'.
!!! related TS2208 chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts:1:13: This type parameter might need an `extends S` constraint.
!!! related TS6502 chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts:3:27: The expected type comes from the return type of this signature.
    
            // But error to try to climb up the chain
            (new Chain(s)).then(ss => t);
                       ~
!!! error TS2454: Variable 's' is used before being assigned.
                                      ~
!!! error TS2322: Type 'T' is not assignable to type 'S'.
!!! error TS2322:   'S' could be instantiated with an arbitrary type which could be unrelated to 'T'.
!!! related TS2208 chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts:1:13: This type parameter might need an `extends S` constraint.
!!! related TS6502 chainedCallsWithTypeParameterConstrainedToOtherTypeParameter2.ts:3:27: The expected type comes from the return type of this signature.
    
            // Staying at T or S should be fine
            (new Chain(t)).then(tt => t).then(tt => t).then(tt => t);
                       ~
!!! error TS2454: Variable 't' is used before being assigned.
            (new Chain(s)).then(ss => s).then(ss => s).then(ss => s);
                       ~
!!! error TS2454: Variable 's' is used before being assigned.
    
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'Chain<S>'.
        }
    }
    
    // Similar to above, but T is now constrained. Verify that the constraint is maintained across invocations
    interface I {
        x: number;
    }
    class Chain2<T extends I> {
        constructor(public value: T) { }
        then<S extends T>(cb: (x: T) => S): Chain2<S> {
            var i: I;
            var t: T;
            var s: S;
            // Ok to go down the chain, check the constraint at the end.
            // Should get an error that we are assigning a string to a number
            (new Chain2(i)).then(ii => t).then(tt => s).value.x = "";
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
                        ~
!!! error TS2454: Variable 'i' is used before being assigned.
    
            // Staying at T or S should keep the constraint.
            // Get an error when we assign a string to a number in both cases
            (new Chain2(i)).then(ii => t).then(tt => t).then(tt => t).then(tt => t).value.x = "";
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
                        ~
!!! error TS2454: Variable 'i' is used before being assigned.
            (new Chain2(i)).then(ii => s).then(ss => s).then(ss => s).then(ss => s).value.x = "";
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
                        ~
!!! error TS2454: Variable 'i' is used before being assigned.
    
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'Chain2<S>'.
        }
    }